# DIgital_Twin-BeamlineExperiment_HackathonMIT-UN

./: .gitignore  ElectrodesMaps.txt  README.md  SimpleSetUp.lua  beamline_results.csv  beamline_results_phase1.csv  beamline_results_phase2.csv  beamline_results_phase3.csv  beamline_study.db  beamline_study_phase1.db  beamline_study_phase2.db  beamline_study_phase3.db  optimizer.py  optimizer_phases.py
Propuesta 1/: detector_geometry.json  electrode_groups.json  optimization_result.json  optimize.py  optimizer_config.json  optuna_config.json  optuna_simion.db  requirements-optuna.txt  simion_run.py
Propuesta 1/Resultados/: transmision.csv  transmision_eventos.json  transmision_metricas.json
Propuesta 1/SIMION/: README.html  resukt.csv  simion.key  trj31C6.tmp  (+1 more)
Propuesta 1/SIMION/examples/extension/: CMakeLists.txt  Makefile  README.html  simple.c  simple.cpp  test.lua
Propuesta 2/: InfoHackathon.txt  optimize.py  optuna_config_hackathon.json  optuna_config_hackathon_angle_quality_v16.json  optuna_config_hackathon_bpm_v8.json  optuna_config_hackathon_detector_contact_v15.json  optuna_config_hackathon_detector_contact_v15b.json  optuna_config_hackathon_detector_window_quality_v17.json  optuna_config_hackathon_e19_window_v11.json  optuna_config_hackathon_front_guided_v14.json  optuna_config_hackathon_front_valid_v13.json  optuna_config_hackathon_global_v7.json  optuna_config_hackathon_local.json  optuna_config_hackathon_low_voltage_v12.json  optuna_config_hackathon_real_bpm_v10.json  optuna_config_hackathon_real_bpm_v9.json  optuna_config_hackathon_tight.json
(+2040 files in other folders)
